# Enigma-Encryption-Machine

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
ainterface/: ainterface.cc  ainterface.h
interface/: interface.cc  interface.h
machine/: machine.cc  machine.h
primitive/: primitive.cc  primitive.h
reflector/: reflector.cc  reflector.h
rotor/: rotor.cc  rotor.h
tests/: CMakeLists.txt  file  test.cc
